# SmartLocker

./: CMakeLists.txt  main.cpp  qml.qrc
qml/: AdminPage.qml  AdminPanel.qml  CourierPage.qml  GuestPage.qml  Login.qml  Main.qml  Register.qml  UserDashboard.qml  qml.qrc
src/: DatabaseManager.cpp  DatabaseManager.h  LockerManager.cpp  LockerManager.h  LogManager.cpp  LogManager.h  LoginManager.cpp  LoginManager.h  PackageManager.cpp  PackageManager.h  SettingsManager.cpp  SettingsManager.h  UserManager.cpp  UserManager.h
translations/: en_US.qml  zh_CN.qml
